test/TestSuite/Syntax/Errors/empty.tjp
# MARK: error 1 unexpctd_token
